added hline and vline

--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -7,14 +7,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Michael Truong</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="/css/portfolio-new.css">
 
     </head>
     <body>
 
     	<div class="container">
-            
 
-
+            <div class="hline">
+                <div class="name"></div>
+            </div>
+            <div class="vline">
+                <div class="navBar"></div>
+            </div>
 
     	</div>
     	
