--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Freelance full stack developer">
-        <meta name="keywords" content="Michael Truong,Web Designer, Web Developer, UI Designer,UX Designer, Game Designer, PHP Developer, Full Stack Developer, San Antonio">
+        <meta name="keywords" content="Michael Truong, Web Designer, Web Developer, UI Designer, UX Designer, Game Designer, PHP Developer, Full Stack Developer, San Antonio">
         <meta name="author" content="Hege Refsnes">
         <title>Michael Truong</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
@@ -39,31 +39,24 @@
             <div class="name"><h1 class="nameHeader">Michael Truong</h1></div>
             <div class="portfolio">
                 <div class="projects" id="project1">
-                    <div class="portContent"><h4>Title</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-                    <div class="portImage"><a href="google.com"><img src="/img/placeholder.png"></a></div>
+                    <div class="portContent"><h4>Memory Wars</h4>Game Design/Development, Object Oriented Programming, HTML5, CSS3, Javascript, jQuery.</div>
+                    <div class="portImage"><a href=""><img src="/img/memorywars.png"></a></div>
                 </div>
                 <div class="projects" id="project2">
-                    <div class="portContent"><h4>Title</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-                    <div class="portImage"><img src="/img/placeholder.png"></div>
+                    <div class="portContent"><h4>Weather Map</h4>UI/UX Design, API, HTML5, CSS3, Javascript, jQuery.</div>
+                    <div class="portImage"><img src="/img/weathermap.png"></div>
                 </div>
                 <div class="projects" id="project3">
-                    <div class="portContent"><h4>Title</h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-                        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-                        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-                    <div class="portImage"><img src="/img/placeholder.png"></div>
+                    <div class="portContent"><h4>Alien Artifact</h4>UI/UX Design, Photoshop, HTML5, CSS3, Javascript.</div>
+                    <div class="portImage"><img src="/img/artifact.png"></div>
+                </div>
+                <div class="projects" id="project4">
+                    <div class="portContent"><h4>4U2Do</h4>HTML5, CSS3, Javascript.</div>
+                    <div class="portImage"><img src="/img/todo.png"></div>
+                </div>
+                <div class="projects" id="project5">
+                    <div class="portContent"><h4>Knotted Fates</h4>Game Design/Development, Level Design, Parallax Mapping, Photoshop</div>
+                    <div class="portImage"><iframe width="100%" height="100%" src="https://www.youtube.com/embed/bRubZ8F9Yp4" frameborder="0" allowfullscreen></iframe></div>
                 </div>
             </div>
             <div class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -83,7 +76,6 @@
                 <form method="POST">
                     <input type="text" id="formname" name="name" class="formtext" placeholder=" Your Name*">
                     <input type="text" id="formnumber" name="number" class="formtext" placeholder=" Your Contact Number">
-                    <br>
                     <input type="text" id="formemail" name="email" class="formtext" placeholder=" Your Email*">
                     <textarea type="text" id="formmessage" name="message" class="formtextarea" placeholder=" Your Message*"></textarea>
                     <button type="submit" id="formsubmit">SEND</button>
@@ -107,7 +99,7 @@
             var transitionTime = 1000;
             var contentShowTime = 500;
             var contentDelayTime = 800;
-            var initialAnimationTime = 2000
+            var initialAnimationTime = 2000;
 
             function hideAll() {
                 $(".name, #goAbout, #goPortfolio, #goBlog, #goContact").css("pointerEvents", "auto");
@@ -203,7 +195,7 @@
                 $(".banner").animate({
                     opacity: "0.7"
                 }, 1000);
-            }, 1500);
+            }, 1000);
             
 
             $(".name").click(function(){
@@ -267,10 +259,10 @@
                 hideAll();
                 $(".navBar").animate({
                     top: "165px",
-                    left: "715px"
+                    left: "615px"
                 },transitionTime);
                 $(".vline").animate({
-                    left: "700px"
+                    left: "600px"
                 }, transitionTime);
                 $(".name").animate({
                     top: "105px",
