--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Freelance full stack developer">
         <meta name="keywords" content="Michael Truong, Web Designer, Web Developer, UI Designer, UX Designer, Game Designer, PHP Developer, Full Stack Developer, San Antonio">
-        <meta name="author" content="Hege Refsnes">
+        <meta name="author" content="Michael Truong">
         <title>Michael Truong</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
