increase font size for mobile settings

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
                 Beauty that compliments functionality and functionality that amplifies beauty; 
                 that is the end goal of all my work. As a creative and a developer I am
                 able to see projects in multiple zooms and angles which allows me to approach 
-                problems with multiple perspectives and offer superior solutions.
+                problems in multiple perspectives and offer superior solutions.
                 <br>
                 <br>
                 I have been in love with creating things since a very young age when I started 
