added links to portfolio projects

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Freelance full stack developer">
+        <meta name="description" content="Michael Truong, a freelance full stack developer and designer">
         <meta name="keywords" content="Michael Truong, Web Designer, Web Developer, UI Designer, UX Designer, Game Designer, PHP Developer, Full Stack Developer, San Antonio">
         <meta name="author" content="Michael Truong">
-        <title>Michael Truong</title>
+        <title>Michael Truong - Web Designer and Developer</title>
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
@@ -66,19 +66,19 @@
             <div class="portfolio">
                 <div class="projects" id="project1">
                     <div class="portContent"><h4>Memory Wars</h4>Game Design/Development, Object Oriented Programming, HTML5, CSS3, Javascript, jQuery.</div>
-                    <div class="portImage"><img src="/img/memorywars.png" class="projectPictures"></div>
+                    <div class="portImage"><a href="/memory-wars.html"><img src="/img/memorywars.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project2">
                     <div class="portContent"><h4>Weather Map</h4>UI/UX Design, API, HTML5, CSS3, Javascript, jQuery.</div>
-                    <div class="portImage"><img src="/img/weathermap.png" class="projectPictures"></div>
+                    <div class="portImage"><a href="/weather_map.html"><img src="/img/weathermap.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project3">
                     <div class="portContent"><h4>Alien Artifact</h4>UI/UX Design, Photoshop, HTML5, CSS3, Javascript.</div>
-                    <div class="portImage"><img src="/img/artifact.png" class="projectPictures"></div>
+                    <div class="portImage"><a href="/calculator.html"><img src="/img/artifact.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project4">
                     <div class="portContent"><h4>4U2Do</h4>HTML5, CSS3, Javascript.</div>
-                    <div class="portImage"><img src="/img/todo.png" class="projectPictures"></div>
+                    <div class="portImage"><a href="/todolist2.html"><img src="/img/todo.png" class="projectPictures"></a></div>
                 </div>
                 <div class="projects" id="project5">
                     <div class="portContent"><h4>Knotted Fates</h4>Game Design/Development, Level Design, Parallax Mapping, Photoshop</div>
