--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <meta name="keywords" content="Michael Truong, Web Designer, Web Developer, UI Designer, UX Designer, Game Designer, PHP Developer, Full Stack Developer, San Antonio">
         <meta name="author" content="Michael Truong">
         <title>Michael Truong - Web Designer and Developer</title>
+        <link rel="SHORTCUT ICON" href="/img/favicon.png">
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Taviraj" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Raleway:300" rel="stylesheet">
